[project]
name = "reactcast-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "gio",email = "witulski.schule@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "discord-py (>=2.7.1,<3.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
